# weakipedia

./: .firebaserc  .gcloudignore  .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
docs/: api-modules.md  database-schema.md  routing-rules.md
public/: CNAME
scripts/: create-spa-fallback.mjs
services/mtproto/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
services/mtproto/src/: config.ts  login.ts  me.ts  send.ts  session.ts  set-profile.ts
services/wikimedia_search/: Dockerfile  README.md  pyproject.toml
services/wikimedia_search/src/wikimedia_search/: __init__.py  api.py  db.py  models.py  resolver.py  static_targets.py
services/wikimedia_search/src/wikimedia_search/apis/: __init__.py  g_trends.py  http_json.py  source_browser.py  target_source_archive_full_text.py  w_article_authorship.py  w_article_editors.py  w_article_metadata.py  w_article_pageviews.py  w_article_parse.py  w_article_revisions.py  w_article_static_build.py  w_article_traffic.py  wdata_item.py
src/: main.tsx  styles.css
